istio/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: digibank
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: digibank-credential
      mode: SIMPLE
    hosts:
    - "digibank.f5demo.org"
