istio/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: digibank
spec:
  hosts:
  - "digibank.aspen-demo.org"
  gateways:
  - digibank
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 3000
        host: portal
